# Chat_With_Youtube_Videos

./: app.py  pyproject.toml  requirements.txt  youtube.py
2s_unknown/: index.faiss  index.pkl
8s_unknown/: index.faiss  index.pkl
